--- a/config.json
+++ b/config.json
@@ -6,68 +6,68 @@
   "COLLIDE_TIME": 0.25,
   
   "PLANT_MIN_NUM": 20,
-  "PLANT_MAX_NUM": 140,
+  "PLANT_MAX_NUM": 180,
   "PLANT_INIT_NUM": 140,
   "PLANT_MAX_SIZE": 11,
-  "PLANT_GROWTH": 20,
+  "PLANT_GROWTH": 19,
   "PLANT_LIFE": 400,
   "PLANT_RANGE": 1000,
   "PLANT_EDGE": 50,
 
   "CREATURE_MIN_NUM": 5,
-  "CREATURE_INIT_NUM": 100,
-  "CREATURE_MULTIPLY": 0.25,
+  "CREATURE_INIT_NUM": 160,
+  "CREATURE_MULTIPLY": 0.3,
   "CREATURE_MIN_SIZE": 2,
   "CREATURE_MAX_SIZE": 10,
   "CREATURES_SEP": 150,
 
   "EAT": 25,
-  "HIT": 200,
-  "SPEED": 2,
-  "HIDE_SPEED": 0.18,
+  "HIT": 100,
+  "SPEED": 2.5,
+  "HIDE_SPEED": 0.2,
   "TURN": 2,
 
   "SENSOR_MAX_ANGLE": 5,
   "SENSOR_RANGE": 550,
   "CLOSE_VISION": 25,
-  "POWER_COST": 0.02,
-  "SPIKE_ENG": 1,
-  "MUTATIONS": 2,
+  "POWER_COST": 0.01,
+  "SPIKE_ENG": 2,
+  "MUTATIONS": 6,
   "DEL_LINK": 0.0,
   "DEL_NODE": 0.0,
-  "LINKS_RATE": 0.2,
+  "LINKS_RATE": 0.18,
   
   "BASE_ENERGY": 0.15,
   "MOVE_ENERGY": 0.01,
-  "SIZE2ENG": 200,
-  "SIZE_COST": 2,
+  "SIZE2ENG": 240,
+  "SIZE_COST": 2.2,
   "ATK_ENG": 0.02,
-  "EAT_ENG": 0.02,
-  "VEGE2ENG": 1.5,
-  "MEAT2ENG": 14,
-  "DMG2ENG": 2.5,
+  "EAT_ENG": 0.01,
+  "VEGE2ENG": 4,
+  "MEAT2ENG": 16,
+  "DMG2ENG": 2,
   "RUN_COST": 2,
   "RUN_TIME": 8,
 
   "REP_TIME": 160,
   "REP_ENERGY": 0.3,
   "CHILDS_NUM": 1,
-  "MEAT_TIME": 200,
+  "MEAT_TIME": 180,
   "DIET_MOD": 0.003,
-  "HIDE_MOD": 0.4,
+  "HIDE_MOD": 0.6,
   
-  "MEM_TIME": 0.35,
-  "MEMORY_SIZE_MAX": 15,
+  "MEM_TIME": 0.25,
+  "MEMORY_SIZE_MAX": 10,
 
   "DIFF": 0.35,
   
-  "HIT2FIT": 0.15,
-  "KILL2FIT": 300,
-  "MEAT2FIT": 0.15,
+  "HIT2FIT": 0.03,
+  "KILL2FIT": 150,
+  "MEAT2FIT": 0.1,
   "VEGE2FIT": 0.1,
-  "BORN2FIT": 300,
+  "BORN2FIT": 250,
 
-  "RANK_SIZE": 75,
+  "RANK_SIZE": 35,
   "RANK_DECAY": 0.4,
   "AUTO_SAVE_TIME": 500,
   "STAT_PERIOD": 100,
@@ -79,11 +79,11 @@
   "ROCK_VERT_MIN": 4,
   "ROCK_VERT_MAX": 10,
   "NEURON_MOD": 50,
-  "NEURO_COST": 0.02,
+  "NEURO_COST": 0.01,
   "NET_BASE": 325,
   "GRAPH_H": 30,
   "GRAPH_V": 20,
-  "GENERATIONS_NUMBER": 15,
+  "GENERATIONS_NUMBER": 5,
   
-  "NET": [16, 0, 0, 0, 0, 0, 0, 0, 6]
+  "NET": [15, 0, 3, 0, 0, 3, 0, 6]
 }
