--- a/.gitignore
+++ b/.gitignore
@@ -834,3 +834,14 @@ saves/Universum3 copy/config.json
 saves/Universum3 copy/saves.json
 saves/Universum/config.json
 saves/Universum/config.json
+saves/UNIVERSUM I/105.json
+saves/UNIVERSUM I/251.json
+saves/UNIVERSUM I/418.json
+saves/UNIVERSUM I/918.json
+saves/UNIVERSUM I/1077.json
+saves/UNIVERSUM I/1098.json
+saves/UNIVERSUM I/1598.json
+saves/UNIVERSUM I/2098.json
+saves/UNIVERSUM I/config.json
+saves/UNIVERSUM I/saves.json
+saves/Universum/config.json
