--- a/.gitignore
+++ b/.gitignore
@@ -845,3 +845,138 @@ saves/UNIVERSUM I/2098.json
 saves/UNIVERSUM I/config.json
 saves/UNIVERSUM I/saves.json
 saves/Universum/config.json
+saves/UNIVERSUM I/66543.json
+saves/UNIVERSUM I/67043.json
+saves/UNIVERSUM I/67543.json
+saves/UNIVERSUM I/68043.json
+saves/UNIVERSUM I/68543.json
+saves/UNIVERSUM I/69043.json
+saves/UNIVERSUM I/69543.json
+saves/UNIVERSUM I/70043.json
+saves/UNIVERSUM I/70543.json
+saves/UNIVERSUM I/71043.json
+saves/UNIVERSUM I/71543.json
+saves/UNIVERSUM I/72043.json
+saves/UNIVERSUM I/72543.json
+saves/UNIVERSUM I/73043.json
+saves/UNIVERSUM I/73543.json
+saves/UNIVERSUM I/74043.json
+saves/UNIVERSUM I/74543.json
+saves/UNIVERSUM I/75043.json
+saves/UNIVERSUM I/75543.json
+saves/UNIVERSUM I/76043.json
+saves/UNIVERSUM I/76543.json
+saves/UNIVERSUM I/77043.json
+saves/UNIVERSUM I/77543.json
+saves/UNIVERSUM I/78043.json
+saves/UNIVERSUM I/78543.json
+saves/UNIVERSUM I/79043.json
+saves/UNIVERSUM I/79543.json
+saves/UNIVERSUM I/80043.json
+saves/UNIVERSUM I/80543.json
+saves/UNIVERSUM I/81043.json
+saves/UNIVERSUM I/81543.json
+saves/UNIVERSUM I/82043.json
+saves/UNIVERSUM I/82543.json
+saves/UNIVERSUM I/83043.json
+saves/UNIVERSUM I/83543.json
+saves/UNIVERSUM I/84043.json
+saves/UNIVERSUM I/84543.json
+saves/UNIVERSUM I/85043.json
+saves/UNIVERSUM I/85543.json
+saves/UNIVERSUM I/86043.json
+saves/UNIVERSUM I/86543.json
+saves/UNIVERSUM I/87043.json
+saves/UNIVERSUM I/87543.json
+saves/UNIVERSUM I/88043.json
+saves/UNIVERSUM I/88543.json
+saves/UNIVERSUM I/89043.json
+saves/UNIVERSUM I/89543.json
+saves/UNIVERSUM I/90043.json
+saves/UNIVERSUM I/90543.json
+saves/UNIVERSUM I/91043.json
+saves/UNIVERSUM I/91543.json
+saves/UNIVERSUM I/92043.json
+saves/UNIVERSUM I/92543.json
+saves/UNIVERSUM I/93043.json
+saves/UNIVERSUM I/93543.json
+saves/UNIVERSUM I/94043.json
+saves/UNIVERSUM I/94543.json
+saves/UNIVERSUM I/95043.json
+saves/UNIVERSUM I/95543.json
+saves/UNIVERSUM I/96043.json
+saves/UNIVERSUM I/96543.json
+saves/UNIVERSUM I/97043.json
+saves/UNIVERSUM I/97543.json
+saves/UNIVERSUM I/98043.json
+saves/UNIVERSUM I/98543.json
+saves/UNIVERSUM I/99043.json
+saves/UNIVERSUM I/99543.json
+saves/UNIVERSUM I/100043.json
+saves/UNIVERSUM I/100543.json
+saves/UNIVERSUM I/101043.json
+saves/UNIVERSUM I/101543.json
+saves/UNIVERSUM I/102043.json
+saves/UNIVERSUM I/102543.json
+saves/UNIVERSUM I/103043.json
+saves/UNIVERSUM I/103543.json
+saves/UNIVERSUM I/104043.json
+saves/UNIVERSUM I/104543.json
+saves/UNIVERSUM I/105043.json
+saves/UNIVERSUM I/105543.json
+saves/UNIVERSUM I/106043.json
+saves/UNIVERSUM I/106543.json
+saves/UNIVERSUM I/107043.json
+saves/UNIVERSUM I/107543.json
+saves/UNIVERSUM I/108043.json
+saves/UNIVERSUM I/108543.json
+saves/UNIVERSUM I/109043.json
+saves/UNIVERSUM I/109543.json
+saves/UNIVERSUM I/110043.json
+saves/UNIVERSUM I/110543.json
+saves/UNIVERSUM I/111043.json
+saves/UNIVERSUM I/111543.json
+saves/UNIVERSUM I/112043.json
+saves/UNIVERSUM I/112543.json
+saves/UNIVERSUM I/113043.json
+saves/UNIVERSUM I/113543.json
+saves/UNIVERSUM I/114043.json
+saves/UNIVERSUM I/114543.json
+saves/UNIVERSUM I/115043.json
+saves/UNIVERSUM I/115543.json
+saves/UNIVERSUM I/116043.json
+saves/UNIVERSUM I/116543.json
+saves/UNIVERSUM I/117043.json
+saves/UNIVERSUM I/117543.json
+saves/UNIVERSUM I/118043.json
+saves/UNIVERSUM I/118543.json
+saves/UNIVERSUM I/119043.json
+saves/UNIVERSUM I/119543.json
+saves/UNIVERSUM I/120043.json
+saves/UNIVERSUM I/120543.json
+saves/UNIVERSUM I/121043.json
+saves/UNIVERSUM I/121543.json
+saves/UNIVERSUM I/122043.json
+saves/UNIVERSUM I/122543.json
+saves/UNIVERSUM I/123043.json
+saves/UNIVERSUM I/123543.json
+saves/UNIVERSUM I/124043.json
+saves/UNIVERSUM I/124543.json
+saves/UNIVERSUM I/125043.json
+saves/UNIVERSUM I/125543.json
+saves/UNIVERSUM I/126043.json
+saves/UNIVERSUM I/126543.json
+saves/UNIVERSUM I/127043.json
+saves/UNIVERSUM I/127543.json
+saves/UNIVERSUM I/128043.json
+saves/UNIVERSUM I/128543.json
+saves/UNIVERSUM I/129043.json
+saves/UNIVERSUM I/129543.json
+saves/UNIVERSUM I/130043.json
+saves/UNIVERSUM I/130543.json
+saves/UNIVERSUM I/131043.json
+saves/UNIVERSUM I/131543.json
+saves/UNIVERSUM I/132043.json
+saves/UNIVERSUM I/132543.json
+saves/UNIVERSUM I/133043.json
+saves/UNIVERSUM I/133543.json
