--- a/.gitignore
+++ b/.gitignore
@@ -980,3 +980,4 @@ saves/UNIVERSUM I/132043.json
 saves/UNIVERSUM I/132543.json
 saves/UNIVERSUM I/133043.json
 saves/UNIVERSUM I/133543.json
+saves/UNIVERSUM I/133863.json
