--- a/.gitignore
+++ b/.gitignore
@@ -981,3 +981,245 @@ saves/UNIVERSUM I/132543.json
 saves/UNIVERSUM I/133043.json
 saves/UNIVERSUM I/133543.json
 saves/UNIVERSUM I/133863.json
+output/config.json
+output/res/fonts/_fira.ttf
+output/res/fonts/fira.ttf
+output/res/icons/biosynth32.ico
+output/res/icons/biosynth64.ico
+output/res/icons/biosynth128.ico
+output/res/icons/biosynth256.ico
+output/res/icons/logo256.ico
+output/res/icons/planet01.ico
+output/res/icons/planet2-32.ico
+output/res/icons/planet2-128.ico
+output/res/icons/planet2-256.ico
+output/res/icons/planet3-32.ico
+output/res/icons/planet3-128.ico
+output/res/icons/planet03.ico
+output/res/icons/planet04.ico
+output/res/icons/planet05-128.ico
+output/res/icons/planet05.ico
+output/res/icons/planet05c.ico
+output/res/icons/planet32.ico
+output/res/icons/planet64.ico
+output/res/icons/planet64b.ico
+output/res/icons/planet96.ico
+output/res/icons/planet128.ico
+output/res/images/biosynth32.png
+output/res/images/biosynth64.png
+output/res/images/biosynth128.png
+output/res/images/biosynth256.png
+output/res/images/logo256.png
+output/res/images/planet01.png
+output/res/images/planet2-32.png
+output/res/images/planet2-128.png
+output/res/images/planet2-256.png
+output/res/images/planet3-32.png
+output/res/images/planet3-128.png
+output/res/images/planet3-256.png
+output/res/images/planet03.png
+output/res/images/planet04.png
+output/res/images/planet05.png
+output/res/images/planet32.png
+output/res/images/planet64.png
+output/res/images/planet96.png
+output/res/images/planet128.png
+output/res/themes/blue.json
+output/res/themes/green.json
+output/res/themes/window.json
+output/saves/UNIVERSUM I/66543.json
+output/saves/UNIVERSUM I/67043.json
+output/saves/UNIVERSUM I/67543.json
+output/saves/UNIVERSUM I/68043.json
+output/saves/UNIVERSUM I/68543.json
+output/saves/UNIVERSUM I/69043.json
+output/saves/UNIVERSUM I/69543.json
+output/saves/UNIVERSUM I/70043.json
+output/saves/UNIVERSUM I/70543.json
+output/saves/UNIVERSUM I/71043.json
+output/saves/UNIVERSUM I/71543.json
+output/saves/UNIVERSUM I/72043.json
+output/saves/UNIVERSUM I/72543.json
+output/saves/UNIVERSUM I/73043.json
+output/saves/UNIVERSUM I/73543.json
+output/saves/UNIVERSUM I/74043.json
+output/saves/UNIVERSUM I/74543.json
+output/saves/UNIVERSUM I/75043.json
+output/saves/UNIVERSUM I/75543.json
+output/saves/UNIVERSUM I/76043.json
+output/saves/UNIVERSUM I/76543.json
+output/saves/UNIVERSUM I/77043.json
+output/saves/UNIVERSUM I/77543.json
+output/saves/UNIVERSUM I/78043.json
+output/saves/UNIVERSUM I/78543.json
+output/saves/UNIVERSUM I/79043.json
+output/saves/UNIVERSUM I/79543.json
+output/saves/UNIVERSUM I/80043.json
+output/saves/UNIVERSUM I/80543.json
+output/saves/UNIVERSUM I/81043.json
+output/saves/UNIVERSUM I/81543.json
+output/saves/UNIVERSUM I/82043.json
+output/saves/UNIVERSUM I/82543.json
+output/saves/UNIVERSUM I/83043.json
+output/saves/UNIVERSUM I/83543.json
+output/saves/UNIVERSUM I/84043.json
+output/saves/UNIVERSUM I/84543.json
+output/saves/UNIVERSUM I/85043.json
+output/saves/UNIVERSUM I/85543.json
+output/saves/UNIVERSUM I/86043.json
+output/saves/UNIVERSUM I/86543.json
+output/saves/UNIVERSUM I/87043.json
+output/saves/UNIVERSUM I/87543.json
+output/saves/UNIVERSUM I/88043.json
+output/saves/UNIVERSUM I/88543.json
+output/saves/UNIVERSUM I/89043.json
+output/saves/UNIVERSUM I/89543.json
+output/saves/UNIVERSUM I/90043.json
+output/saves/UNIVERSUM I/90543.json
+output/saves/UNIVERSUM I/91043.json
+output/saves/UNIVERSUM I/91543.json
+output/saves/UNIVERSUM I/92043.json
+output/saves/UNIVERSUM I/92543.json
+output/saves/UNIVERSUM I/93043.json
+output/saves/UNIVERSUM I/93543.json
+output/saves/UNIVERSUM I/94043.json
+output/saves/UNIVERSUM I/94543.json
+output/saves/UNIVERSUM I/95043.json
+output/saves/UNIVERSUM I/95543.json
+output/saves/UNIVERSUM I/96043.json
+output/saves/UNIVERSUM I/96543.json
+output/saves/UNIVERSUM I/97043.json
+output/saves/UNIVERSUM I/97543.json
+output/saves/UNIVERSUM I/98043.json
+output/saves/UNIVERSUM I/98543.json
+output/saves/UNIVERSUM I/99043.json
+output/saves/UNIVERSUM I/99543.json
+output/saves/UNIVERSUM I/100043.json
+output/saves/UNIVERSUM I/100543.json
+output/saves/UNIVERSUM I/101043.json
+output/saves/UNIVERSUM I/101543.json
+output/saves/UNIVERSUM I/102043.json
+output/saves/UNIVERSUM I/102543.json
+output/saves/UNIVERSUM I/103043.json
+output/saves/UNIVERSUM I/103543.json
+output/saves/UNIVERSUM I/104043.json
+output/saves/UNIVERSUM I/104543.json
+output/saves/UNIVERSUM I/105043.json
+output/saves/UNIVERSUM I/105543.json
+output/saves/UNIVERSUM I/106043.json
+output/saves/UNIVERSUM I/106543.json
+output/saves/UNIVERSUM I/107043.json
+output/saves/UNIVERSUM I/107543.json
+output/saves/UNIVERSUM I/108043.json
+output/saves/UNIVERSUM I/108543.json
+output/saves/UNIVERSUM I/109043.json
+output/saves/UNIVERSUM I/109543.json
+output/saves/UNIVERSUM I/110043.json
+output/saves/UNIVERSUM I/110543.json
+output/saves/UNIVERSUM I/111043.json
+output/saves/UNIVERSUM I/111543.json
+output/saves/UNIVERSUM I/112043.json
+output/saves/UNIVERSUM I/112543.json
+output/saves/UNIVERSUM I/113043.json
+output/saves/UNIVERSUM I/113543.json
+output/saves/UNIVERSUM I/114043.json
+output/saves/UNIVERSUM I/114543.json
+output/saves/UNIVERSUM I/115043.json
+output/saves/UNIVERSUM I/115543.json
+output/saves/UNIVERSUM I/116043.json
+output/saves/UNIVERSUM I/116543.json
+output/saves/UNIVERSUM I/117043.json
+output/saves/UNIVERSUM I/117543.json
+output/saves/UNIVERSUM I/118043.json
+output/saves/UNIVERSUM I/118543.json
+output/saves/UNIVERSUM I/119043.json
+output/saves/UNIVERSUM I/119543.json
+output/saves/UNIVERSUM I/120043.json
+output/saves/UNIVERSUM I/120543.json
+output/saves/UNIVERSUM I/121043.json
+output/saves/UNIVERSUM I/121543.json
+output/saves/UNIVERSUM I/122043.json
+output/saves/UNIVERSUM I/122543.json
+output/saves/UNIVERSUM I/123043.json
+output/saves/UNIVERSUM I/123543.json
+output/saves/UNIVERSUM I/124043.json
+output/saves/UNIVERSUM I/124543.json
+output/saves/UNIVERSUM I/125043.json
+output/saves/UNIVERSUM I/125543.json
+output/saves/UNIVERSUM I/126043.json
+output/saves/UNIVERSUM I/126543.json
+output/saves/UNIVERSUM I/127043.json
+output/saves/UNIVERSUM I/127543.json
+output/saves/UNIVERSUM I/128043.json
+output/saves/UNIVERSUM I/128543.json
+output/saves/UNIVERSUM I/129043.json
+output/saves/UNIVERSUM I/129543.json
+output/saves/UNIVERSUM I/130043.json
+output/saves/UNIVERSUM I/130543.json
+output/saves/UNIVERSUM I/131043.json
+output/saves/UNIVERSUM I/131543.json
+output/saves/UNIVERSUM I/132043.json
+output/saves/UNIVERSUM I/132543.json
+output/saves/UNIVERSUM I/133043.json
+output/saves/UNIVERSUM I/133543.json
+output/saves/UNIVERSUM I/133863.json
+output/saves/UNIVERSUM I/134363.json
+output/saves/UNIVERSUM I/134442.json
+output/saves/UNIVERSUM I/config.json
+output/saves/UNIVERSUM I/saves.json
+output/saves/creatures/AMUSML.json
+output/saves/creatures/ATDZVD.json
+output/saves/creatures/BVXFUI.json
+output/saves/creatures/BYVAPF.json
+output/saves/creatures/CMJSWE.json
+output/saves/creatures/CTMUSY.json
+output/saves/creatures/CZLAOC.json
+output/saves/creatures/DAIUVD.json
+output/saves/creatures/DJMSNP.json
+output/saves/creatures/FDFSNR.json
+output/saves/creatures/FDFSXZ.json
+output/saves/creatures/HEVOFE.json
+output/saves/creatures/HOTPJL.json
+output/saves/creatures/HRIACE.json
+output/saves/creatures/HSHZON.json
+output/saves/creatures/IJFKWE.json
+output/saves/creatures/IPHOSE.json
+output/saves/creatures/ITHTWT.json
+output/saves/creatures/ITRIXF.json
+output/saves/creatures/JDUFWD.json
+output/saves/creatures/JKIOPO.json
+output/saves/creatures/JUTFIK.json
+output/saves/creatures/KUXRFT.json
+output/saves/creatures/LLZOUJ.json
+output/saves/creatures/MTSRHS.json
+output/saves/creatures/MZHYVD.json
+output/saves/creatures/NLXFIZ.json
+output/saves/creatures/NODYID.json
+output/saves/creatures/NYIIIA.json
+output/saves/creatures/OIJFWU.json
+output/saves/creatures/OPDDMT.json
+output/saves/creatures/PAPUWO.json
+output/saves/creatures/PAWOOC.json
+output/saves/creatures/PJSTOC.json
+output/saves/creatures/PUHYTD.json
+output/saves/creatures/PUIUTS.json
+output/saves/creatures/QEJKTR.json
+output/saves/creatures/RTRJVT.json
+output/saves/creatures/RWWRSF.json
+output/saves/creatures/SQHUJJ.json
+output/saves/creatures/STJVCU.json
+output/saves/creatures/STQRBZ.json
+output/saves/creatures/SWSUMO.json
+output/saves/creatures/TENUIJ.json
+output/saves/creatures/VAKUVT.json
+output/saves/creatures/VLTYTH.json
+output/saves/creatures/WANUIJ.json
+output/saves/creatures/WRCWXL.json
+output/saves/creatures/WSVOFE.json
+output/saves/creatures/WWIACE.json
+output/saves/creatures/XDNACS.json
+output/saves/creatures/ZETUID.json
+output/saves/creatures/ZUJSDZ.json
+output/saves/creatures/ZZIRBW.json
+saves/UNIVERSUM I/134363.json
+saves/UNIVERSUM I/134442.json
