--- a/.gitignore
+++ b/.gitignore
@@ -1223,3 +1223,27 @@ output/saves/creatures/ZUJSDZ.json
 output/saves/creatures/ZZIRBW.json
 saves/UNIVERSUM I/134363.json
 saves/UNIVERSUM I/134442.json
+saves/Charnobyl/100.json
+saves/Charnobyl/128.json
+saves/Charnobyl/228.json
+saves/Charnobyl/328.json
+saves/Charnobyl/428.json
+saves/Charnobyl/497.json
+saves/Charnobyl/528.json
+saves/Charnobyl/541.json
+saves/Charnobyl/641.json
+saves/Charnobyl/741.json
+saves/Charnobyl/841.json
+saves/Charnobyl/941.json
+saves/Charnobyl/1023.json
+saves/Charnobyl/1123.json
+saves/Charnobyl/1223.json
+saves/Charnobyl/1323.json
+saves/Charnobyl/1423.json
+saves/Charnobyl/1523.json
+saves/Charnobyl/1623.json
+saves/Charnobyl/1715.json
+saves/Charnobyl/config.json
+saves/Charnobyl/saves.json
+lib/__pycache__/net_draw.cpython-310.opt-1.pyc
+lib/__pycache__/net_draw.cpython-310.pyc
