--- a/.gitignore
+++ b/.gitignore
@@ -1247,3 +1247,50 @@ saves/Charnobyl/config.json
 saves/Charnobyl/saves.json
 lib/__pycache__/net_draw.cpython-310.opt-1.pyc
 lib/__pycache__/net_draw.cpython-310.pyc
+saves/Charnobyl/1815.json
+saves/Charnobyl/1915.json
+saves/Charnobyl/2015.json
+saves/Charnobyl/2115.json
+saves/Charnobyl/2215.json
+saves/Charnobyl/2315.json
+saves/Charnobyl/2415.json
+saves/Charnobyl/2515.json
+saves/Charnobyl/2615.json
+saves/Charnobyl/2715.json
+saves/Charnobyl/2815.json
+saves/Charnobyl/2915.json
+saves/Charnobyl/3015.json
+saves/Charnobyl/3115.json
+saves/Charnobyl/3215.json
+saves/Charnobyl/3315.json
+saves/Charnobyl/3415.json
+saves/Charnobyl/3515.json
+saves/Charnobyl/3615.json
+saves/Charnobyl/3715.json
+saves/Charnobyl/3815.json
+saves/Charnobyl/3915.json
+saves/Charnobyl/4015.json
+saves/Charnobyl/4115.json
+saves/Charnobyl/4215.json
+saves/Charnobyl/4315.json
+saves/Charnobyl/4415.json
+saves/Charnobyl/4515.json
+saves/Charnobyl/4615.json
+saves/Charnobyl/4715.json
+saves/Charnobyl/4815.json
+saves/Charnobyl/4915.json
+saves/Charnobyl/5015.json
+saves/Charnobyl/5115.json
+saves/Charnobyl/5215.json
+saves/Charnobyl/5315.json
+saves/Charnobyl/5415.json
+saves/Charnobyl/5515.json
+saves/Charnobyl/5615.json
+saves/Charnobyl/5715.json
+saves/Charnobyl/5815.json
+saves/Charnobyl/5915.json
+saves/Charnobyl/6015.json
+saves/Charnobyl/6115.json
+saves/Charnobyl/6215.json
+saves/Charnobyl/6315.json
+saves/Charnobyl/10891.json
