--- a/saves/NEW WORLD/config.json
+++ b/saves/NEW WORLD/config.json
@@ -1,15 +1,15 @@
 {
-  "WORLD": [3600, 2700],
+  "WORLD": [5700, 3000],
   "SCREEN": [1900, 1000],
   "ITER": 1,
   "FPS": 30,
   "COLLIDE_TIME": 0.25,
   
-  "PLANT_MIN_NUM": 5,
-  "PLANT_MAX_NUM": 160,
+  "PLANT_MIN_NUM": 20,
+  "PLANT_MAX_NUM": 220,
   "PLANT_INIT_NUM": 120,
   "PLANT_MAX_SIZE": 11,
-  "PLANT_GROWTH": 22,
+  "PLANT_GROWTH": 20,
   "PLANT_LIFE": 400,
   "PLANT_RANGE": 1000,
   "PLANT_EDGE": 50,
@@ -21,40 +21,40 @@
   "CREATURE_MAX_SIZE": 10,
   "CREATURES_SEP": 150,
 
-  "EAT": 25,
+  "EAT": 20,
   "HIT": 100,
-  "SPEED": 2,
+  "SPEED": 2.5,
   "HIDE_SPEED": 0.2,
-  "TURN": 2,
+  "TURN": 2.5,
 
   "SENSOR_MAX_ANGLE": 5,
-  "SENSOR_RANGE": 550,
+  "SENSOR_RANGE": 650,
   "CLOSE_VISION": 20,
-  "POWER_COST": 0.01,
-  "SPIKE_ENG": 2,
-  "MUTATIONS": 1,
+  "POWER_COST": 0.02,
+  "SPIKE_ENG": 0.5,
+  "MUTATIONS": 4,
   "DEL_LINK": 0.0,
   "DEL_NODE": 0.0,
   "LINKS_RATE": 0.12,
   
   "BASE_ENERGY": 0.2,
-  "MOVE_ENERGY": 0.01,
+  "MOVE_ENERGY": 0.015,
   "SIZE2ENG": 220,
-  "SIZE_COST": 2.5,
-  "ATK_ENG": 0.01,
-  "EAT_ENG": 0.01,
-  "VEGE2ENG": 3,
-  "MEAT2ENG": 12,
-  "DMG2ENG": 4.5,
+  "SIZE_COST": 1.6,
+  "ATK_ENG": 0.03,
+  "EAT_ENG": 0.03,
+  "VEGE2ENG": 1.1,
+  "MEAT2ENG": 16,
+  "DMG2ENG": 3.5,
   "RUN_COST": 2,
   "RUN_TIME": 8,
 
   "REP_TIME": 200,
   "REP_ENERGY": 0.3,
   "CHILDS_NUM": 1,
-  "MEAT_TIME": 60,
+  "MEAT_TIME": 90,
   "DIET_MOD": 0.003,
-  "HIDE_MOD": 0.4,
+  "HIDE_MOD": 0.3,
   
   "MEM_TIME": 0.15,
   "MEMORY_SIZE_MAX": 10,
@@ -62,28 +62,28 @@
   "DIFF": 0.35,
   
   "HIT2FIT": 0.01,
-  "KILL2FIT": 150,
+  "KILL2FIT": 250,
   "MEAT2FIT": 0.1,
   "VEGE2FIT": 0.1,
-  "BORN2FIT": 250,
+  "BORN2FIT": 350,
 
-  "RANK_SIZE": 45,
-  "RANK_DECAY": 0.4,
-  "AUTO_SAVE_TIME": 100,
+  "RANK_SIZE": 90,
+  "RANK_DECAY": 0.25,
+  "AUTO_SAVE_TIME": 500,
   "STAT_PERIOD": 100,
   "TIME": 1,
   
   "ROCK_NUM": 35,
-  "ROCK_SIZE_MIN": 20,
-  "ROCK_SIZE_MAX": 50,
+  "ROCK_SIZE_MIN": 40,
+  "ROCK_SIZE_MAX": 140,
   "ROCK_VERT_MIN": 5,
-  "ROCK_VERT_MAX": 9,
+  "ROCK_VERT_MAX": 10,
   "NEURON_MOD": 50,
-  "NEURO_COST": 0.035,
+  "NEURO_COST": 0.03,
   "NET_BASE": 325,
   "GRAPH_H": 30,
   "GRAPH_V": 20,
   "GENERATIONS_NUMBER": 5,
   
-  "NET": [15, 0, 3, 0, 0, 3, 0, 6]
+  "NET": [15, 0, 0, 0, 0, 0, 6]
 }
